--- a/endPoints/adminEndPoint/views/admin-post-page/index.ejs
+++ b/endPoints/adminEndPoint/views/admin-post-page/index.ejs
@@ -138,7 +138,7 @@
 
 								<!--icon-->
 								<td>
-									<div cell-container class="cell-container" action="/admin/api/header/icon"  identifier="only" for="icon"> 
+									<div cell-container class="cell-container" action="/admin/api/header/icon" identifier="only" for="icon"> 
 										<div file-input-container class="cell-container__input-container cell-container__file-input-container">
 											<label for="icon">
 												<i class="fa-solid fa-image"></i>
@@ -156,7 +156,7 @@
 
 								<!--logo-->
 								<td>
-									<div cell-container class="cell-container" action="/admin/api/header/logo"  identifier="only" for="logo">
+									<div cell-container class="cell-container" action="/admin/api/header/logo" identifier="only" for="logo">
 										<div file-input-container class="cell-container__input-container cell-container__file-input-container">
 											<label for="logo">
 												<i class="fa-solid fa-image"></i>
@@ -194,7 +194,7 @@
 
 								<!--Title-->
 								<td>
-									<div cell-container class="cell-container" action="/admin/api/header/title"  identifier="only" for="title"> 
+									<div cell-container class="cell-container" action="/admin/api/header/title" identifier="only" for="title"> 
 										<div class="cell-container__input-container cell-container__text-input-container">
 											<div pseudo-input contenteditable="true" placeholder="Title" maxlength="30">
 												<%= builder.header.title %>
@@ -210,7 +210,7 @@
 
 								<!--Color-->
 								<td>
-									<div cell-container class="cell-container" action="/admin/api/header/color"  identifier="only" for="color">
+									<div cell-container class="cell-container" action="/admin/api/header/color" identifier="only" for="color">
 										<div class="cell-container__input-container cell-container__color-input-container">
 											<input type="color" value="<%= builder.header.color %>"/>
 										</div>									
@@ -241,7 +241,7 @@
 
 								<!--Description-->
 								<td>
-									<div cell-container class="cell-container" action="/admin/api/header/description"  identifier="only" for="description"> 
+									<div cell-container class="cell-container" action="/admin/api/header/description" identifier="only" for="description"> 
 										<div class="cell-container__input-container cell-container__text-area-container">
 											<textarea maxlength="255"><%= builder.header.description %></textarea>
 										</div>
@@ -285,7 +285,7 @@
 						</thead>
 						<tbody>
 
-							<template>
+							<template propaganda-template>
 								<tr table-row>
 
 									<!--Big-Image-->
