--- a/endPoints/adminEndPoint/views/admin-post-page/index.ejs
+++ b/endPoints/adminEndPoint/views/admin-post-page/index.ejs
@@ -42,6 +42,10 @@
 			referrerpolicy="no-referrer"
 		/>
 
+		<!--jquery-->
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 		<!--scripts-->
 		<script defer type="module" src="/admin-post-page/scripts/index.js"></script>
 	</head>
@@ -289,7 +293,7 @@
 								<tr table-row>
 
 									<!--Big-Image-->
-									<td>
+									<td class="--sortable-item">
 										<div cell-container class="cell-container"> 
 											<div file-input-container class="cell-container__input-container cell-container__file-input-container">
 												<label>
@@ -307,7 +311,7 @@
 									</td>
 
 									<!--Small-Image-->
-									<td>
+									<td class="--sortable-item">
 										<div cell-container class="cell-container"> 
 											<div file-input-container class="cell-container__input-container cell-container__file-input-container">
 												<label>
