--- a/endPoints/adminEndPoint/views/admin-get-page/index.ejs
+++ b/endPoints/adminEndPoint/views/admin-get-page/index.ejs
@@ -65,7 +65,7 @@
 				<div>
 					<h1>Admin Page</h1>
 					<div>
-						<form login-form method="POST" action="/admin">
+						<form login-form method="POST" action="/admin/login">
 							<span message-container>
 								<i class="fa-solid fa-circle-info"></i>
 								<i message></i>
