--- a/endPoints/adminEndPoint/views/admin-post-page/index.ejs
+++ b/endPoints/adminEndPoint/views/admin-post-page/index.ejs
@@ -107,6 +107,9 @@
 					<button open-settings-aside-menu-button>
 						<i class="fa-solid fa-gear"></i>
 					</button>
+					<a href="/admin/logout">
+						<i class="fa-solid fa-right-from-bracket"></i>
+					</a>
 				</div>
 			</div>
 		</header>
