--- a/endPoints/adminEndPoint/views/admin-post-page/styles/header/header.scss
+++ b/endPoints/adminEndPoint/views/admin-post-page/styles/header/header.scss
@@ -31,7 +31,8 @@ header {
 			display: flex;
 			gap: 24.5px;
 
-			& > button {
+			& > button,
+			a {
 				@extend %default-font-size;
 				color: white;
 			}
