--- a/endPoints/adminEndPoint/views/admin-get-page/styles/main/main.css
+++ b/endPoints/adminEndPoint/views/admin-get-page/styles/main/main.css
@@ -1,160 +1,299 @@
-form > div > div input, form > div > div label, form > div > button {
-  font-size: 14px;
+div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
+  padding-right: 21px;
+  padding-left: 21px;
 }
 
+div.table-section-container > div:first-of-type > h1 {
+  font-size: 30.1px;
+}
+
+@media (min-width: 375px) {
+  div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
+    padding-right: 28px;
+    padding-left: 28px;
+  }
+}
+@media (min-width: 650px) {
+  div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
+    padding-right: 56px;
+    padding-left: 56px;
+  }
+}
+@media (min-width: 870px) {
+  div.table-section-container > div:first-of-type > h1 {
+    font-size: 33.6px;
+  }
+}
+@media (min-width: 1300px) {
+  div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
+    padding-right: 15.4vw;
+    padding-left: 15.4vw;
+  }
+}
 @media (min-width: 1700px) {
-  form > div > div input, form > div > div label, form > div > button {
-    font-size: 15.4px;
+  div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
+    padding-right: 21vw;
+    padding-left: 21vw;
+  }
+}
+@media (min-width: 2880px) {
+  div.table-section-container__table-container, div.table-section-container > div:last-of-type, div.table-section-container > div:first-of-type {
+    padding-right: 30%;
+    padding-left: 30%;
   }
 }
 main {
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100vh;
-  min-height: 700px;
+  padding: 119px 0px;
   background-color: var(--light-gray);
-  position: relative;
-}
-main > div:first-of-type {
-  z-index: 2;
-  padding: 28px;
-  max-width: 462px;
-  width: 100%;
-}
-main > div:first-of-type > div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border-radius: 7px;
-  padding: 28px;
-  background-color: white;
-}
-main > div:first-of-type > div > h1 {
-  color: var(--primary-color);
-}
-main > div:first-of-type > div > div:first-of-type {
-  width: 100%;
-}
-main > div:last-of-type {
-  z-index: 1;
-  width: 100%;
-  height: 40vh;
-  background-color: var(--primary-color);
-  position: absolute;
-  bottom: 0px;
-}
-main > div:last-of-type > div:first-of-type {
-  width: 100%;
-  height: 100px;
-  overflow: hidden;
-  transform: translateX(-50%);
-  position: absolute;
-  top: -51.8px;
-  left: 50%;
-}
-main > div:last-of-type > div:first-of-type svg path {
-  fill: var(--primary-color);
 }
 
-form {
-  width: 100%;
-  padding-top: 24.5px;
+div.table-section-container {
+  padding: 35px 0px;
 }
-form > span {
-  display: none;
-  font-size: 13.3px;
-  padding-bottom: 14px;
+div.table-section-container > div:first-of-type > h1 {
+  color: var(--dark-gray);
+  padding: 14px 0px;
 }
-form > span.--not-ok {
-  display: block;
-  color: red;
+div.table-section-container > div:first-of-type > h1 > i {
+  color: var(--primary-color);
 }
-form > span.--ok {
-  display: block;
-  color: var(--regular-green);
+div.table-section-container > div:last-of-type {
+  padding-top: 7px;
 }
-form > span i {
-  font-style: normal;
-}
-form > div {
-  display: flex;
-  flex-direction: column;
-  gap: 18.9px;
-}
-form > div > button {
-  width: 100%;
+div.table-section-container > div:last-of-type > button {
   gap: 7px;
-  padding: 10.5px;
   font-family: var(--font-bold);
-  background-color: var(--primary-color);
-  border-radius: 7px;
+  background-color: var(--regular-green);
   color: white;
-  transition: ease-in-out 0.35s;
+  width: 100%;
+  font-size: 15.4px;
+  padding: 14px;
+  border-radius: 7px;
 }
-form > div > div {
+
+div.table-section-container__table-container {
+  padding-top: 14px;
+  padding-bottom: 14px;
+  width: 100%;
+  overflow-x: scroll;
+}
+div.table-section-container__table-container.--off {
+  display: none;
+}
+div.table-section-container__table-container > table {
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 7px;
+  overflow: hidden;
+  background-color: var(--primary-color);
+  table-layout: auto;
+}
+div.table-section-container__table-container > table thead,
+div.table-section-container__table-container > table tbody {
+  font-size: 14px;
+}
+div.table-section-container__table-container > table thead {
+  width: 100%;
+  user-select: none;
+  height: 41px;
+  color: white;
+}
+div.table-section-container__table-container > table tbody > tr {
+  background-color: white;
+}
+div.table-section-container__table-container > table tbody > tr > td {
+  min-width: 280px;
+  height: 52.5px;
+}
+div.table-section-container__table-container > table tbody > tr > td.--sortable-item {
+  width: 100%;
+}
+
+div.cell-container {
+  display: flex;
+  gap: 14px;
+  align-items: center;
+  justify-content: center;
   position: relative;
 }
-form > div > div label {
-  cursor: text;
-  color: var(--regular-gray);
-  transition: ease-in-out 0.28s;
+div.cell-container > div.cell-container__cell-info-container {
   transform: translateY(-50%);
-  pointer-events: none;
   position: absolute;
   top: 50%;
-  left: 14px;
+  right: 17.5px;
 }
-form > div > div input {
+div.cell-container > div.cell-container__cell-info-container.--loading i.cell-container__cell-info-container__loading {
+  display: block;
+}
+div.cell-container > div.cell-container__cell-info-container.--error i:nth-of-type(2) {
+  display: block;
+}
+div.cell-container > div.cell-container__cell-info-container.--ok i:last-of-type {
+  display: block;
+}
+div.cell-container > div.cell-container__cell-info-container i {
+  display: none;
+}
+div.cell-container > div.cell-container__cell-info-container i.cell-container__cell-info-container__loading {
+  width: 16.1px;
+  height: 16.1px;
+  border-radius: 100%;
+  border: 2.8px solid var(--regular-green);
+  border-top: 2.8px solid transparent;
+  animation: spinner 1.4s linear infinite forwards;
+}
+div.cell-container > div.cell-container__cell-info-container > i:nth-of-type(2) {
+  color: red;
+}
+div.cell-container > div.cell-container__cell-info-container > i:last-of-type {
+  color: var(--regular-green);
+}
+
+div.cell-container__input-container {
+  display: flex;
+  gap: 7px;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  padding: 9.1px 14px;
-  border-radius: 7px;
-  border: 2px solid rgb(100, 100, 100);
-  transition: ease-in-out 0.28s;
-  color: var(--dark-gray);
 }
-form > div > div input:not(:placeholder-shown) + label {
-  color: var(--regular-gray);
-  padding: 0px 7px;
-  font-size: 11.9px;
-  background-color: white;
-  transform: translateY(-170%);
-}
-form > div > div input:focus + label {
+
+div.cell-container__file-input-container label {
   color: var(--primary-color);
-  padding: 0px 7px;
-  font-size: 11.9px;
-  background-color: white;
-  transform: translateY(-170%);
+  cursor: pointer;
 }
-form > div > div input:focus {
+div.cell-container__file-input-container input {
+  display: none;
+}
+div.cell-container__file-input-container a {
+  white-space: nowrap;
+  max-width: 140px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+div.cell-container__text-input-container div[pseudo-input] {
+  width: 100%;
+  padding: 0px 21px;
+  text-align: center;
+}
+div.cell-container__text-input-container div[pseudo-input]:empty:before {
+  content: attr(placeholder);
+  color: gray;
+}
+div.cell-container__text-input-container div[pseudo-input]:focus {
   outline: none;
-  border: 2px solid var(--primary-color);
 }
-form > div > div input::placeholder {
-  filter: opacity(0%);
+
+div.cell-container__text-area-container textarea {
+  padding: 14px;
+  width: 80%;
+  resize: none;
+  font-size: 15.4px;
+  height: 52.5px;
+  border: none;
+  text-align: center;
 }
-form > div > div input::-webkit-input-placeholder {
-  /* WebKit browsers */
-  color: transparent;
+div.cell-container__text-area-container textarea:focus {
+  outline: none;
 }
-form > div > div input:-moz-placeholder {
-  /* Mozilla Firefox 4 to 18 */
-  color: transparent;
+
+div.cell-container__color-input-container input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 48px;
+  height: 31.5px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
-form > div > div input::-moz-placeholder {
-  /* Mozilla Firefox 19+ */
-  color: transparent;
+div.cell-container__color-input-container input::-webkit-color-swatch {
+  border-radius: 7px;
+  border: none;
 }
-form > div > div input:-ms-input-placeholder {
-  /* Internet Explorer 10+ */
-  color: transparent;
+div.cell-container__color-input-container input::-moz-color-swatch {
+  border-radius: 7px;
+  border: none;
 }
-form > div > div input:-webkit-autofill, form > div > div input:-webkit-autofill:hover, form > div > div input:-webkit-autofill:focus, form > div > div input:-webkit-autofill:active {
-  transition: background-color 5000s ease-in-out 0s;
+
+td.action-container.--no-drag-button > div > div > button:first-of-type {
+  display: none;
+}
+td.action-container.--no-send-button > div > div > button:nth-of-type(2) {
+  display: none;
+}
+td.action-container > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+td.action-container > div > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
+  width: 175px;
+  position: relative;
+}
+td.action-container > div > div > button {
+  color: var(--primary-color);
+  font-size: 16.8px;
+  padding: 0px 7px;
+}
+td.action-container > div > div > div.action-container__action-info-container {
+  transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  right: 0px;
+}
+td.action-container > div > div > div.action-container__action-info-container.--loading i.action-container__cell-info-container__loading {
+  display: block;
+}
+td.action-container > div > div > div.action-container__action-info-container.--error i:nth-of-type(2) {
+  display: block;
+}
+td.action-container > div > div > div.action-container__action-info-container.--ok i:last-of-type {
+  display: block;
+}
+td.action-container > div > div > div.action-container__action-info-container i {
+  display: none;
+}
+td.action-container > div > div > div.action-container__action-info-container i.action-container__cell-info-container__loading {
+  width: 16.1px;
+  height: 16.1px;
+  border-radius: 100%;
+  border: 2.8px solid var(--regular-green);
+  border-top: 2.8px solid transparent;
+  animation: spinner 1.4s linear infinite forwards;
+}
+td.action-container > div > div > div.action-container__action-info-container > i:nth-of-type(2) {
+  color: red;
+}
+td.action-container > div > div > div.action-container__action-info-container > i:last-of-type {
+  color: var(--regular-green);
+}
+
+@keyframes spinner {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@media (min-width: 1000px) {
+  div.table-section-container__table-container > table thead,
+  div.table-section-container__table-container > table tbody {
+    font-size: 16.8px;
+  }
+  i.cell-container__cell-info-container__loading {
+    border: 3.5px solid var(--regular-green);
+    border-top: 3.5px solid transparent;
+  }
+  i.action-container__cell-info-container__loading {
+    border: 3.5px solid var(--regular-green);
+    border-top: 3.5px solid transparent;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
