--- a/endPoints/adminEndPoint/views/admin-get-page/styles/main/main.scss
+++ b/endPoints/adminEndPoint/views/admin-get-page/styles/main/main.scss
@@ -1,182 +1,344 @@
 @import '../controller/controller.scss';
 
 main {
-	z-index: 1;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100vh;
-	min-height: 700px;
+	padding: 119px 0px;
 	background-color: var(--light-gray);
-	position: relative;
+}
+
+div.table-section-container {
+	padding: 35px 0px;
 
 	& > div:first-of-type {
-		z-index: 2;
-		padding: 28px;
-		max-width: 462px;
-		width: 100%;
+		@extend %default-padding-size;
 
-		& > div {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			border-radius: 7px;
-			padding: 28px;
-			background-color: white;
+		& > h1 {
+			@extend %big-font-size;
+			color: var(--dark-gray);
+			padding: 14px 0px;
 
-			& > h1 {
+			& > i {
 				color: var(--primary-color);
-			}
-
-			& > div:first-of-type {
-				width: 100%;
 			}
 		}
 	}
 
 	& > div:last-of-type {
-		z-index: 1;
-		width: 100%;
-		height: 40vh;
-		background-color: var(--primary-color);
-		position: absolute;
-		bottom: 0px;
+		@extend %default-padding-size;
+		padding-top: 7px;
 
-		& > div:first-of-type {
+		& > button {
+			gap: 7px;
+			font-family: var(--font-bold);
+			background-color: var(--regular-green);
+			color: white;
 			width: 100%;
-			height: 100px;
-			overflow: hidden;
-			transform: translateX(-50%);
-			position: absolute;
-			top: -51.8px;
-			left: 50%;
+			font-size: 15.4px;
+			padding: 14px;
+			border-radius: 7px;
+		}
+	}
+}
 
-			svg path {
-				fill: var(--primary-color);
+div.table-section-container__table-container {
+	&.--off {
+		display: none;
+	}
+
+	@extend %default-padding-size;
+	padding-top: 14px;
+	padding-bottom: 14px;
+	width: 100%;
+	overflow-x: scroll;
+
+	& > table {
+		width: 100%;
+		border-collapse: collapse;
+		border-radius: 7px;
+		overflow: hidden;
+		background-color: var(--primary-color);
+		table-layout: auto;
+
+		thead,
+		tbody {
+			font-size: 14px;
+		}
+
+		thead {
+			width: 100%;
+			user-select: none;
+			height: 41px;
+			color: white;
+		}
+
+		tbody {
+			& > tr {
+				background-color: white;
+
+				& > td {
+					&.--sortable-item {
+						width: 100%;
+					}
+
+					min-width: 280px;
+					height: 52.5px;
+				}
 			}
 		}
 	}
 }
 
-form {
-	width: 100%;
-	padding-top: 24.5px;
+div.cell-container {
+	display: flex;
+	gap: 14px;
+	align-items: center;
+	justify-content: center;
+	position: relative;
 
-	& > span {
-		&.--not-ok {
-			display: block;
-			color: red;
+	& > div.cell-container__cell-info-container {
+		&.--loading {
+			i.cell-container__cell-info-container__loading {
+				display: block;
+			}
+		}
+
+		&.--error {
+			i:nth-of-type(2) {
+				display: block;
+			}
 		}
 
 		&.--ok {
-			display: block;
-			color: var(--regular-green);
+			i:last-of-type {
+				display: block;
+			}
 		}
 
-		display: none;
-		font-size: 13.3px;
-		padding-bottom: 14px;
+		transform: translateY(-50%);
+		position: absolute;
+		top: 50%;
+		right: 17.5px;
 
 		i {
-			font-style: normal;
+			display: none;
+		}
+
+		i.cell-container__cell-info-container__loading {
+			width: 16.1px;
+			height: 16.1px;
+			border-radius: 100%;
+			border: 2.8px solid var(--regular-green);
+			border-top: 2.8px solid transparent;
+			animation: spinner 1.4s linear infinite forwards;
+		}
+
+		& > i:nth-of-type(2) {
+			color: red;
+		}
+
+		& > i:last-of-type {
+			color: var(--regular-green);
+		}
+	}
+}
+
+div.cell-container__input-container {
+	display: flex;
+	gap: 7px;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+}
+
+div.cell-container__file-input-container {
+	label {
+		color: var(--primary-color);
+		cursor: pointer;
+	}
+
+	input {
+		display: none;
+	}
+
+	a {
+		white-space: nowrap;
+		max-width: 140px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+}
+
+div.cell-container__text-input-container {
+	div[pseudo-input] {
+		&:empty:before {
+			content: attr(placeholder);
+			color: gray;
+		}
+
+		&:focus {
+			outline: none;
+		}
+
+		width: 100%;
+		padding: 0px 21px;
+		text-align: center;
+	}
+}
+
+div.cell-container__text-area-container {
+	textarea {
+		&:focus {
+			outline: none;
+		}
+
+		padding: 14px;
+		width: 80%;
+		resize: none;
+		font-size: 15.4px;
+		height: 52.5px;
+		border: none;
+		text-align: center;
+	}
+}
+
+div.cell-container__color-input-container {
+	input {
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		width: 48px;
+		height: 31.5px;
+		background-color: transparent;
+		border: none;
+		cursor: pointer;
+	}
+
+	input::-webkit-color-swatch {
+		border-radius: 7px;
+		border: none;
+	}
+
+	input::-moz-color-swatch {
+		border-radius: 7px;
+		border: none;
+	}
+}
+
+td.action-container {
+	&.--no-drag-button {
+		& > div {
+			& > div {
+				& > button:first-of-type {
+					display: none;
+				}
+			}
+		}
+	}
+
+	&.--no-send-button {
+		& > div {
+			& > div {
+				& > button:nth-of-type(2) {
+					display: none;
+				}
+			}
 		}
 	}
 
 	& > div {
 		display: flex;
-		flex-direction: column;
-		gap: 18.9px;
-
-		& > button {
-			@extend %small-font-size;
-			width: 100%;
-			gap: 7px;
-			padding: 10.5px;
-			font-family: var(--font-bold);
-			background-color: var(--primary-color);
-			border-radius: 7px;
-			color: white;
-			transition: ease-in-out 0.35s;
-		}
+		align-items: center;
+		justify-content: center;
 
 		& > div {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			gap: 14px;
+			width: 175px;
 			position: relative;
 
-			label {
-				@extend %small-font-size;
-				cursor: text;
-				color: var(--regular-gray);
-				transition: ease-in-out 0.28s;
+			& > button {
+				color: var(--primary-color);
+				font-size: 16.8px;
+				padding: 0px 7px;
+			}
+
+			& > div.action-container__action-info-container {
+				&.--loading {
+					i.action-container__cell-info-container__loading {
+						display: block;
+					}
+				}
+
+				&.--error {
+					i:nth-of-type(2) {
+						display: block;
+					}
+				}
+
+				&.--ok {
+					i:last-of-type {
+						display: block;
+					}
+				}
+
 				transform: translateY(-50%);
-				pointer-events: none;
 				position: absolute;
 				top: 50%;
-				left: 14px;
-			}
+				right: 0px;
 
-			input {
-				&:not(:placeholder-shown) + label {
-					color: var(--regular-gray);
-					padding: 0px 7px;
-					font-size: 11.9px;
-					background-color: white;
-					transform: translateY(-170%);
+				i {
+					display: none;
 				}
 
-				&:focus + label {
-					color: var(--primary-color);
-					padding: 0px 7px;
-					font-size: 11.9px;
-					background-color: white;
-					transform: translateY(-170%);
+				i.action-container__cell-info-container__loading {
+					width: 16.1px;
+					height: 16.1px;
+					border-radius: 100%;
+					border: 2.8px solid var(--regular-green);
+					border-top: 2.8px solid transparent;
+					animation: spinner 1.4s linear infinite forwards;
 				}
 
-				&:focus {
-					outline: none;
-					border: 2px solid var(--primary-color);
+				& > i:nth-of-type(2) {
+					color: red;
 				}
 
-				&::placeholder {
-					filter: opacity(0%);
+				& > i:last-of-type {
+					color: var(--regular-green);
 				}
-
-				&::-webkit-input-placeholder {
-					/* WebKit browsers */
-					color: transparent;
-				}
-
-				&:-moz-placeholder {
-					/* Mozilla Firefox 4 to 18 */
-					color: transparent;
-				}
-
-				&::-moz-placeholder {
-					/* Mozilla Firefox 19+ */
-					color: transparent;
-				}
-
-				&:-ms-input-placeholder {
-					/* Internet Explorer 10+ */
-					color: transparent;
-				}
-
-				&:-webkit-autofill,
-				&:-webkit-autofill:hover,
-				&:-webkit-autofill:focus,
-				&:-webkit-autofill:active {
-					transition: background-color 5000s ease-in-out 0s;
-				}
-
-				@extend %small-font-size;
-				width: 100%;
-				padding: 9.1px 14px;
-				border-radius: 7px;
-				border: 2px solid rgb(100, 100, 100);
-				transition: ease-in-out 0.28s;
-				color: var(--dark-gray);
 			}
 		}
+	}
+}
+
+@keyframes spinner {
+	from {
+		transform: rotate(0deg);
+	}
+
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+@media (min-width: 1000px) {
+	div.table-section-container__table-container {
+		& > table {
+			thead,
+			tbody {
+				font-size: 16.8px;
+			}
+		}
+	}
+
+	i.cell-container__cell-info-container__loading {
+		border: 3.5px solid var(--regular-green);
+		border-top: 3.5px solid transparent;
+	}
+
+	i.action-container__cell-info-container__loading {
+		border: 3.5px solid var(--regular-green);
+		border-top: 3.5px solid transparent;
 	}
 }
