--- a/endPoints/adminEndPoint/views/admin-get-page/index.ejs
+++ b/endPoints/adminEndPoint/views/admin-get-page/index.ejs
@@ -297,7 +297,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<template propaganda-template>
+							<template propagandas-template>
 								<tr table-row>
 
 									<!--big-image-->
