--- a/endpoints/adminEndpoint/views/admin-get-page/styles/main/main.scss
+++ b/endpoints/adminEndpoint/views/admin-get-page/styles/main/main.scss
@@ -85,7 +85,7 @@ div.table-section-container__table-container {
 					}
 
 					min-width: 280px;
-					height: 52.5px;
+					height: 54px;
 				}
 			}
 		}
@@ -186,6 +186,7 @@ div.cell-container__text-input-container {
 		width: 100%;
 		padding: 0px 21px;
 		text-align: center;
+		padding: 14px;
 	}
 }
 
@@ -199,7 +200,6 @@ div.cell-container__text-area-container {
 		width: 80%;
 		resize: none;
 		font-size: 15.4px;
-		height: 52.5px;
 		border: none;
 		text-align: center;
 	}
