--- a/endpoints/adminEndpoint/views/admin-login-get-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-login-get-page/index.ejs
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="robots" content="noindex">
+		<meta name="robots" content="noindex" />
 
 		<!--theme-color-->
 		<meta name="theme-color" content="<%= builder.header.color %>" />
@@ -11,9 +11,8 @@
 		<!--icon-->
 		<link rel="shortcut icon" href="<%= builder.header.icon %>" />
 
-		<!--title & description-->
-		<title><%= builder.header.title%> | Admin</title>
-		<meta name="description" content="<%= builder.header.description%>" />
+		<!--title-->
+		<title><%= builder.header.title%> | Login</title>
 
 		<!--css-->
 		<style type="text/css" media="screen">
