--- a/endpoints/rootEndpoint/views/error-get-page/index.ejs
+++ b/endpoints/rootEndpoint/views/error-get-page/index.ejs
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="robots" content="noindex" />
 
 		<!--theme-color-->
 		<meta name="theme-color" content="<%= builder.header.color %>" />
@@ -10,9 +11,8 @@
 		<!--icon-->
 		<link rel="shortcut icon" href="<%= builder.header.icon %>" />
 
-		<!--title & description-->
+		<!--title-->
 		<title><%= builder.header.title%> | <%= message %></title>
-		<meta name="description" content="<%= builder.header.description%>" />
 
 		<!--css-->
 		<style type="text/css" media="screen">
