--- a/endpoints/adminEndpoint/views/admin-get-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-get-page/index.ejs
@@ -620,7 +620,7 @@
 											<div
 												class="cell-container__input-container cell-container__select-container"
 											>
-												<select>
+												<select product-categories-select>
 													<template>
 														<option></option>
 													</template>
