--- a/endpoints/adminEndpoint/views/admin-get-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-get-page/index.ejs
@@ -595,7 +595,7 @@
 												<label>
 													<i class="fa-solid fa-image"></i>
 												</label>
-												<input type="file" accept="image/*" />
+												<input product-image type="file" accept="image/*" />
 												<a target="_blank">Image</a>
 											</div>
 											<div
@@ -620,7 +620,7 @@
 											<div
 												class="cell-container__input-container cell-container__select-container"
 											>
-												<select product-categories-select>
+												<select product-category product-categories-select>
 													<template>
 														<option></option>
 													</template>
@@ -649,6 +649,7 @@
 												class="cell-container__input-container cell-container__text-input-container"
 											>
 												<div
+													product-name
 													pseudo-input
 													contenteditable="true"
 													placeholder="Name"
@@ -678,6 +679,7 @@
 												class="cell-container__input-container cell-container__text-input-container"
 											>
 												<div
+													product-price
 													pseudo-input
 													contenteditable="true"
 													placeholder="Price"
@@ -707,6 +709,7 @@
 												class="cell-container__input-container cell-container__text-input-container"
 											>
 												<div
+													product-off
 													pseudo-input
 													contenteditable="true"
 													placeholder="Off"
@@ -736,6 +739,7 @@
 												class="cell-container__input-container cell-container__text-input-container"
 											>
 												<div
+													product-installment
 													pseudo-input
 													contenteditable="true"
 													placeholder="Installment"
@@ -765,6 +769,7 @@
 												class="cell-container__input-container cell-container__text-input-container"
 											>
 												<div
+													product-whatsapp
 													pseudo-input
 													contenteditable="true"
 													placeholder="Whatsapp"
@@ -794,6 +799,7 @@
 												class="cell-container__input-container cell-container__text-input-container"
 											>
 												<div
+													product-message
 													pseudo-input
 													contenteditable="true"
 													placeholder="Message"
