--- a/endpoints/adminEndpoint/views/admin-get-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-get-page/index.ejs
@@ -572,13 +572,13 @@
 						<thead>
 							<tr>
 								<th>Image</th>
-								<th>Category</th>
+								<th class="--hidden">Category</th>
 								<th>Name</th>
 								<th>Price</th>
 								<th>Off</th>
-								<th>Installment</th>
-								<th>Whatsapp</th>
-								<th>Message</th>
+								<th class="--hidden">Installment</th>
+								<th class="--hidden">Whatsapp</th>
+								<th class="--hidden">Message</th>
 								<th>Actions</th>
 							</tr>
 						</thead>
@@ -615,7 +615,7 @@
 									</td>
 
 									<!--category-->
-									<td>
+									<td class="--hidden">
 										<div cell-container class="cell-container">
 											<div
 												class="cell-container__input-container cell-container__select-container"
@@ -733,7 +733,7 @@
 									</td>
 
 									<!--installment-->
-									<td>
+									<td class="--hidden">
 										<div cell-container class="cell-container">
 											<div
 												class="cell-container__input-container cell-container__text-input-container"
@@ -763,7 +763,7 @@
 									</td>
 
 									<!--whatsapp-->
-									<td>
+									<td class="--hidden">
 										<div cell-container class="cell-container">
 											<div
 												class="cell-container__input-container cell-container__text-input-container"
@@ -793,7 +793,7 @@
 									</td>
 
 									<!--message-->
-									<td>
+									<td class="--hidden">
 										<div cell-container class="cell-container">
 											<div
 												class="cell-container__input-container cell-container__text-input-container"
