--- a/endpoints/adminEndpoint/views/admin-login-get-page/styles/index/index.scss
+++ b/endpoints/adminEndpoint/views/admin-login-get-page/styles/index/index.scss
@@ -14,6 +14,10 @@
 }
 
 * {
+	&:focus-visible {
+		outline: 2px solid #0398fc;
+	}
+
 	padding: 0px;
 	margin: 0px;
 	box-sizing: border-box;
@@ -24,7 +28,6 @@
 
 body {
 	overflow-x: hidden;
-	position: static;
 }
 
 body,
