--- a/endpoints/adminEndpoint/views/error-get-page/styles/header/header.scss
+++ b/endpoints/adminEndpoint/views/error-get-page/styles/header/header.scss
@@ -18,7 +18,7 @@ header {
 
 		& > a {
 			display: flex;
-			padding: 7px 0px;
+			padding: 7px;
 
 			& > img:first-of-type {
 				@extend %default-height-size;
