--- a/endpoints/rootEndpoint/views/error-get-page/styles/header/header.css
+++ b/endpoints/rootEndpoint/views/error-get-page/styles/header/header.css
@@ -30,7 +30,7 @@ header > div:first-of-type {
 }
 header > div:first-of-type > a {
   display: flex;
-  padding: 7px 0px;
+  padding: 7px;
 }
 header > div:first-of-type > a > img:first-of-type {
   filter: grayscale(100%) brightness(0) invert(1);
