--- a/endpoints/rootEndpoint/views/error-get-page/styles/index/index.css
+++ b/endpoints/rootEndpoint/views/error-get-page/styles/index/index.css
@@ -19,10 +19,12 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+*:focus-visible {
+  outline: 2px solid #0398fc;
+}
 
 body {
   overflow-x: hidden;
-  position: static;
 }
 
 body,
