--- a/endpoints/rootEndpoint/views/root-get-page/styles/modules/modules.scss
+++ b/endpoints/rootEndpoint/views/root-get-page/styles/modules/modules.scss
@@ -40,7 +40,7 @@
 
 		& > div:nth-child(2) {
 			width: 100%;
-			padding-bottom: 5.6px;
+			padding-bottom: 10.5px;
 
 			& > hr {
 				border: 0px;
@@ -50,17 +50,18 @@
 		}
 
 		img {
-			width: 154px;
-			height: 154px;
+			width: 140px;
+			height: 140px;
 			border-radius: 7px;
 			object-fit: contain;
 		}
 
 		& > div:last-of-type {
 			display: flex;
+			flex-direction: column;
+			gap: 3.5px;
 			justify-content: center;
 			align-items: center;
-			flex-direction: column;
 			width: 100%;
 			height: 100%;
 
@@ -212,6 +213,17 @@
 			padding: 21px 21px 224px 21px;
 			overflow-y: scroll;
 			height: 100%;
+		}
+	}
+}
+
+@media (min-width: 1300px) {
+	%product-container {
+		& > div:first-of-type {
+			img {
+				width: 154px;
+				height: 154px;
+			}
 		}
 	}
 }
