--- a/endpoints/adminEndpoint/views/admin-get-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-get-page/index.ejs
@@ -94,7 +94,22 @@
 						</div>
 					</div>
 				</div>
-				<div></div>
+				<div>
+					<ul>
+						<li>
+							<a href="#">
+								<i class="fa-solid fa-user"></i>
+								<i>Change username</i>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fa-solid fa-lock"></i>
+								<i>Change password</i>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</aside>
 
