--- a/endpoints/rootEndpoint/views/root-get-page/styles/main/main.scss
+++ b/endpoints/rootEndpoint/views/root-get-page/styles/main/main.scss
@@ -2,6 +2,7 @@
 @import '../controller/controller.scss';
 
 main {
+	min-height: 41vh;
 	padding: 119px 0;
 	background-color: var(--light-gray);
 }
