--- a/endpoints/rootEndpoint/views/root-get-page/styles/modules/modules.scss
+++ b/endpoints/rootEndpoint/views/root-get-page/styles/modules/modules.scss
@@ -217,6 +217,53 @@
 	}
 }
 
+%aside-list {
+	li {
+		a,
+		button {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			gap: 7px;
+			padding: 7px;
+			width: 100%;
+			position: relative;
+
+			i:last-of-type {
+				&:hover {
+					color: var(--primary-color);
+				}
+
+				width: 100%;
+				text-align: left;
+				white-space: nowrap;
+				transition: ease-in-out 0.35s;
+				color: var(--dark-gray);
+				font-family: var(--font-bold);
+				font-style: normal;
+				font-size: 15.4px;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
+		}
+
+		a {
+			i:first-of-type {
+				color: var(--primary-color);
+			}
+		}
+
+		button {
+			i:first-of-type {
+				width: 8.4px;
+				height: 8.4px;
+				border-radius: 100%;
+				background-color: var(--primary-color);
+			}
+		}
+	}
+}
+
 @media (min-width: 1300px) {
 	%product-container {
 		& > div:first-of-type {
@@ -242,6 +289,17 @@
 		& > div {
 			width: 322px;
 			min-width: 322px;
+		}
+	}
+
+	%aside-list {
+		li {
+			a,
+			button {
+				i:last-of-type {
+					font-size: 16.1px;
+				}
+			}
 		}
 	}
 }
