--- a/endpoints/adminEndpoint/views/admin-get-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-get-page/index.ejs
@@ -140,8 +140,8 @@
 
 		<!--main-->
 		<main>
-			<!--header-section-->
-			<div class="table-section-container">
+			<!--header-->
+			<div header-table-section class="table-section-container">
 				<!--table-title-->
 				<div>
 					<h1>
